[package]
name = "clicker"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "clicker"
path = "src/main.rs"
windows_subsystem = "windows"

[dependencies]
fltk = "1.4.26"

device_query = "2.0.0"
enigo = "0.2.0-rc2"

rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

once_cell = "1.19.0"
rodio = "0.17.3"

webbrowser = "0.8.13"
locale_config = "0.3.0"