[package]
name = "clicker"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"


[[bin]]
name = "clicker"
path = "src/main.rs"

[dependencies]
fltk = { version = "1.5.22", features = ["fltk-bundled"] }

device_query = "2.1.0"
enigo = "0.3.0"

rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

once_cell = "1.21.3"
rodio = "0.20.1"

webbrowser = "1.0.6"
locale_config = "0.3.0"
dirs = "5.0.1"
